--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,13 @@
 .App {
   text-align: center;
+  background-color: #c0d0eb;
+  width: 100%;
+}
+#canvas {
+  position: absolute;
+  display: flex;
+  height: 100vh;
+  width: 100vw;
 }
 
 .App-logo {
@@ -13,26 +21,36 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.ButtonLink__Container {
+  color: #8f611f;
+  background-color: #F4B860;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: block;
+  border-radius: 20px;
+  margin: 8px;
+  -webkit-box-shadow: 3px 4px 11px -4px rgba(0,0,0,0.57); 
+  box-shadow: 3px 4px 11px -4px rgba(0,0,0,0.57);
 }
 
-.App-link {
-  color: #61dafb;
+.ButtonLink__Content {
+  padding: 8px 16px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Panel__Container {
+  background-color: #87a8de;
+  padding: 20px;
+  margin: 8px;
+  border-radius: 20px;
+  -webkit-box-shadow: 3px 4px 11px -4px rgba(0,0,0,0.57); 
+  box-shadow: 3px 4px 11px -4px rgba(0,0,0,0.57);
+  max-width: 400px;
+}
+
+.Panel__Container__centered {
+  position:absolute;
+  left: 50%;
+  top: 50%;
+  translate: -50% -50%;
 }
