--- a/src/App.css
+++ b/src/App.css
@@ -68,7 +68,7 @@
 }
 
 .Panel__Container {
-  background-color: #87a8de;
+  background-color: #89b3e0;
   padding: 20px;
   margin: 8px;
   border-radius: 20px;
