--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -2,11 +2,12 @@
     width: 140px;
 }
 
-.Card__Container img{
+.Card__Container img.Card__Back{
     transition: 0.2s all ease-in-out;
+    cursor: pointer;
 }
 
-.Card__Container img:hover {
+.Card__Container img.Card__Back:hover {
     transform: scale(1.1);
     -webkit-filter: drop-shadow(5px 5px 5px #111);
     filter:         drop-shadow(5px 5px 5px #111); 
